@@ -19,6 +19,46 @@ end_package
 
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|ArrayList
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Collection
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Collections
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -279,7 +319,7 @@ name|cayenne
 operator|.
 name|map
 operator|.
-name|Relationship
+name|QueryDescriptor
 import|;
 end_import
 
@@ -293,7 +333,7 @@ name|cayenne
 operator|.
 name|map
 operator|.
-name|QueryDescriptor
+name|Relationship
 import|;
 end_import
 
@@ -322,68 +362,6 @@ operator|.
 name|util
 operator|.
 name|Util
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|ArrayList
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Arrays
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Collection
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Collections
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|List
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|regex
-operator|.
-name|Pattern
 import|;
 end_import
 
@@ -2186,10 +2164,6 @@ name|ArrayList
 argument_list|<>
 argument_list|()
 decl_stmt|;
-name|String
-index|[]
-name|dbAttrPathByDot
-decl_stmt|;
 if|if
 condition|(
 name|domain
@@ -2234,47 +2208,34 @@ if|if
 condition|(
 name|objAttribute
 operator|.
-name|getDbAttributePath
+name|isFlattened
 argument_list|()
-operator|!=
-literal|null
 condition|)
 block|{
-name|dbAttrPathByDot
-operator|=
 name|objAttribute
 operator|.
-name|getDbAttributePath
+name|getDbPathIterator
 argument_list|()
 operator|.
-name|split
+name|forEachRemaining
 argument_list|(
-name|Pattern
-operator|.
-name|quote
-argument_list|(
-literal|"."
-argument_list|)
-argument_list|)
-expr_stmt|;
-for|for
-control|(
-name|String
-name|partOfPath
-range|:
-name|dbAttrPathByDot
-control|)
+name|entry
+lambda|->
 block|{
 if|if
 condition|(
-name|partOfPath
+name|entry
+operator|instanceof
+name|DbRelationship
+condition|)
+block|{
+if|if
+condition|(
+name|entry
 operator|.
 name|equals
 argument_list|(
 name|relationship
-operator|.
-name|getName
-argument_list|()
 argument_list|)
 condition|)
 block|{
@@ -2287,6 +2248,9 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+block|}
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 block|}
