@@ -39,6 +39,7 @@ CAY-2535 Modeler: Impossible to import stored procedure apart from db tables
 CAY-2537 Modeler: Schema Generation Complete popup window is hidden
 CAY-2544 Possible name clash of ivar and property name in generated class
 CAY-2547 CayenneDataObject serialization issue
+CAY-2559 Modeler: Warning dialog shows wrong information after changing target entity in dbRelationship
 
 ----------------------------------
 Release: 4.1.B1
